[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Menus/MenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Menus/ButtonTypeA.gd" type="Script" id=2]

[node name="ButtonTypeA" type="Button"]
margin_right = 375.0
margin_bottom = 58.0
theme = ExtResource( 1 )
action_mode = 0
text = "Test"
flat = true
align = 0
script = ExtResource( 2 )

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
